style.css
body
{
    margin: 0;
    font-family: sans-serif;
}

#header
{
    background-image: url("media/abstract.svg");
    background-size: cover;
    background-attachment: fixed;

    /* box-shadow: inset 0 0 0 75vh rgba(255, 255, 255, 0.3); */ 
    height: 75vh;
    display: flex;
    justify-content: center;
    align-items: center;

}

/*
#title-wrapper
{
    box-shadow: inset 0 0 0 100vh rgba(0, 0, 0, 0.7);
}
*/

:root {
  --title-width: 100%; 
}

#title
{
    font-family: monospace;
    white-space: nowrap;
    overflow: hidden;
    color: white;
    font-size: 6em;
    border-right: .1em solid white;
    /*
    animation: 
        typing 3s steps(34),
        blink 0.8s infinite;
    */
}

@keyframes typing {
    from {width: 0}
    to {width: var(--title-width)}
}

@keyframes blink {
  0% {border-color: transparent}
  50% {border-color: white;}
  100% {border-color: transparent;}
}

#content-grid
{
    margin: 0;
    display: grid;
    grid-template-columns: 15% 50% 35%;
}

#content-grid-diskussion
{
    margin: 0;
    display: grid;
    grid-template-columns: 15% 35% 35% 15%;
}

#navigation-bar
{
    position: sticky;
    top: 0;
    font-size: 1.4em;
    height: 100vh;
    background-color: #20201b;
    align-self: start;
}

#navigation-bar ul
{
    list-style: none;
    margin: 0;
    padding: 0;
}

#navigation-bar ul li
{
    text-align: left;
    color: white;
    margin-left: 1.5vw;
}

#navigation-bar ul li:hover
{
    /*margin-left: 1.45vw;*/
    background-color: beige;
    color: black;
}

#navigation-bar ul li a
{
    display: block;
    text-decoration: unset;
    color: inherit;
}

#navigation-bar ul ul
{
    border-left-width: 1.5vw;
    border-left-color: #20201b;
    border-left-style: solid;
}

#navigation-bar ul ul li
{
    margin-left: 0;
    padding-left: 0.5vw;
    font-size: 0.815em;
    background-color: beige;
    color: black;
    border-bottom:  black 1px solid;
}

#navigation-bar ul ul li:hover
{
    color: white;
    background-color: #20201b;
}

#content
{
    margin-left: 1vw;
    margin-right: 1vw;
}

.content-heading
{
    font-size: 4em;
    font-family: monospace;
    margin-left: auto;
    margin-top: 1vh;
    border-bottom-style: solid;
    border-bottom-width: 5px;
    border-image: linear-gradient(to right, #986b35, #360033) 1;
}

.content-subheading
{
    font-size: 3em;
    font-family: monospace;
    margin-left: auto;
    margin-top: 1vh;
    border-bottom-style: solid;
    border-bottom-width: 5px;
    border-image: linear-gradient(to right, #986b35, #360033) 1;
}

.content-subsubheading
{
    font-size: 2em;
    font-family: monospace;
    margin-left: auto;
    margin-top: 1vh;
    border-bottom-style: solid;
    border-bottom-width: 5px;
    border-image: linear-gradient(to right, #986b35, #360033) 1;   
}

.visibile-for-fly-in
{
    animation: fly-in 1s ease-out;
}

@keyframes fly-in
{
    0%
    {
        transform: translateX(100%);
    }
    100%
    {
        transform: translateX(0%);
    }
}

.content-text
{
    font-size: 1.1em;
    text-align: justify;
    line-height: 1.5;
}

figure img
{ 
    display: block;
    margin: auto;
}

figure figcaption
{
    display: block;
    text-align: center;
}

.content-sources-text
{
    font-size: 1.1em;
    text-align: left;
    /* line-height:1.5;*/
}

footer
{
    min-height: 20vh; 
    background-color: #20201b;

    display: block;
    text-decoration: unset;
    color: inherit;
    
    color: white;
    text-align: center;
    
    display: grid; 
    grid-template-rows: 15% 85%;
}


footer a
{
    text-decoration: underline;
    color: inherit;
}

/*
.footer-text
{
    display: grid;
    grid-template-columns: 20% 22% 23% 22%;
}
*/

table 
{
    font-family: sans-serif;
    margin: 15px;
    border-collapse: collapse;
    width: 100%;
    text-align: left;
    line-height: 1.5;
}

th
{
    border: black 1px solid;
}

tr:nth-child(odd)
{
    background-color: lightgray;
}


@media screen and (max-width: 800px)
{
    #header
    {
        height: 50vh;
    }

    #title
    {
        font-size: 3em;
    }

    #content-grid
    {
        display: block;
    }

    #content
    {
        overflow: hidden;
    }

    #navigation-bar
    {
        height: auto;
        position: relative;
        font-size: 1em;
    }

    figure img
    {
        width: 100%;
    }
}

@media screen and (max-width: 350px)
{
    #title
    {
        font-size: 2em;
    }
}

@media screen and (max-width: 250px)
{
    #title
    {
        font-size: 1.5em;
    }
}

@media screen and (max-width: 150px)
{
    #title
    {
        font-size: 1em;
    }
}

